fix table overflows

--- a/tt-admin-skin.css
+++ b/tt-admin-skin.css
@@ -36,6 +36,7 @@ body {
   padding-bottom: 30px;
 }
 
+
 #contentleft + div h1 + div {
   background: white;
 }
@@ -192,12 +193,6 @@ th {
   margin-bottom: 24px;
 }
 
-
-/** GET CODE PAGE ***/
-
-#contentcenter textarea {
-  width: 720px!important;
-}
 
 /** EMAIL PAGE **/
 
@@ -382,6 +377,15 @@ div[id*=-opool] div + div {
 }
 
 
+/* form fields in settings table */
+
+.value .inputtext {
+  max-width: 420px;
+}
+
+.value #emailHeaderGraphicImg {
+  width: 530px;
+}
 
 
 /* pagination in header */
